add: maquetación lista

--- a/index.html
+++ b/index.html
@@ -254,7 +254,62 @@
                 </p>
             </div>
             <div class="options-contac-buttons">
-                
+                <div class="contac-card">
+                    <div class="contac-card-container">
+                        <ion-icon name="call" class="icono-general"></ion-icon>
+                        <div class="contac-card_text">
+                            <h4>
+                                Llama
+                            </h4>
+                            <p>
+                                021.123.145.14
+                            </p>
+                        </div>
+                    </div>
+                    <a href="#" class="button-general">Llama Ahora</a>
+                </div>
+                <div class="contac-card">
+                    <div class="contac-card-container">
+                        <ion-icon name="call" class="icono-general"></ion-icon>
+                        <div class="contac-card_text">
+                            <h4>
+                                Llama
+                            </h4>
+                            <p>
+                                021.123.145.14
+                            </p>
+                        </div>
+                    </div>
+                    <a href="#" class="button-general">Llama Ahora</a>
+                </div>
+                <div class="contac-card">
+                    <div class="contac-card-container">
+                        <ion-icon name="call" class="icono-general"></ion-icon>
+                        <div class="contac-card_text">
+                            <h4>
+                                Llama
+                            </h4>
+                            <p>
+                                021.123.145.14
+                            </p>
+                        </div>
+                    </div>
+                    <a href="#" class="button-general">Llama Ahora</a>
+                </div>
+                <div class="contac-card">
+                    <div class="contac-card-container">
+                        <ion-icon name="call" class="icono-general"></ion-icon>
+                        <div class="contac-card_text">
+                            <h4>
+                                Llama
+                            </h4>
+                            <p>
+                                021.123.145.14
+                            </p>
+                        </div>
+                    </div>
+                    <a href="#" class="button-general">Llama Ahora</a>
+                </div>
             </div>
                
 
